added styles to the home

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <link rel="stylesheet" href="styles/styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+
 
     <title>MauroGmz | Portfolio</title>
 </head>
@@ -21,7 +23,7 @@
         
         <div id="presentation_title">
             <h1>MauroGmz</h1>
-            <h2>Personal portfolio of Mauro Gómez</h2>
+            <h3>Personal portfolio of Mauro Gómez</h3>
         </div>
         <div id="clippath_polygon">
 
