modifying styles of the banner text and giving it animation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         <div id="presentation_title">
             <h1>MauroGmz</h1>
             <h3>Personal portfolio of Mauro Gómez</h3>
+            <div id="epigraph">
+                MauroGmz
+            </div>
         </div>
+        
         <div id="clippath_polygon">
 
         </div>
