--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 
         </div>
 
+        <div id="clippath_triangle"></div>
+
         <div class="container-fluid h-100"> 
     		<div id="home_button" class="row w-100 align-items-center">
     			<div class="col text-center">
-    				<a class="btn btn-danger regular-button"> Know more </a>
+    				<a href="#about_view" class="btn btn-success regular-button"> Know more </a>
     			</div>	
     		</div>
     
@@ -50,7 +52,9 @@
     	</div>
     </div>
     
-    <div id="about">
+    <div id="about_view">
+
+        <div id="clippath_about"></div>
 
     </div>
 
