--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="about_view">
 
         <div id="clippath_about">
-            <div class="container">
+            <div id="about_title" class="container">
                 <div class="row justify-content-md-center">
                     <h1>ABOUT ME</h1>
                 </div>
@@ -64,13 +64,22 @@
             <div id="about_content" class="container">
                 <div class="row">
                     <div class="col">
-                      1 of 3
+                        <div class="justify-content-md-center">
+                            <h2>Who am I?</h2>
+                        </div>
+                        <p>Esto es una prueba de texto</p>
                     </div>
                     <div class="col">
-                      2 of 3
+                        <div class="justify-content-md-center">
+                            <h2>What is this website?</h2>
+                        </div>
+                        <p>Esto es una prueba de texto</p>
                     </div>
                     <div class="col">
-                      3 of 3
+                        <div class="justify-content-md-center">
+                            <h2>Random facts</h2>
+                        </div>
+                        <p>Esto es una prueba de texto</p>
                     </div>
                 </div>
             </div>
