added some styles for the sections backgrounds

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
 
     </div>
 
+    <div id="background_fixed"></div>
+
+    <div id="projects_section">
+
+    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
