added background gradient in the background fixed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
     </div>
 
-    <div id="background_fixed"></div>
+    <div id="background_fixed">
+        <div class="bw-gradient"></div>
+    </div>
 
     <div id="projects_section">
 
