added text in the about section

--- a/index.html
+++ b/index.html
@@ -67,19 +67,33 @@
                         <div class="justify-content-md-center">
                             <h2>Who am I?</h2>
                         </div>
-                        <p>Esto es una prueba de texto</p>
+                        <p>My name is Mauro Gómez, I am 23 years old and I live in Argentina.
+                        I am studying computer science engineering at the Arturo Jauretche National University (UNAJ),
+                        I am currently finishing my supervised professional practice to obtain a degree in 
+                        computer science engineering. I am also in the research group "Simulation and Technology 
+                        in High Performance Computing (HPC) for applications of social interest".</p>
+                        <p>I'm interested in design, programming, and cloud technologies.</p>
                     </div>
                     <div class="col">
                         <div class="justify-content-md-center">
                             <h2>What is this website?</h2>
                         </div>
-                        <p>Esto es una prueba de texto</p>
+                        <p>Este es mi portafolio personal, creado solo con html, css y javascript. 
+                        Aquí voy a comentar sobre mi y sobre las tecnologías que utilizo o me interesan. 
+                        Espero en un futuro ampliar este sitio agregando alguna sección donde 
+                        pueda comentar mi experiencia con las herramientas que utilizo.</p>
                     </div>
                     <div class="col">
                         <div class="justify-content-md-center">
                             <h2>Random facts</h2>
                         </div>
-                        <p>Esto es una prueba de texto</p>
+                        <p>Some facts about my daily life:</p>
+                        <ul>
+                            <li>I like to play guitar and I try to get songs on a tablature</li>
+                            <li>I used to do instrumentals with Fl Studio, now I rarely do it</li>
+                            <li>I like to read manga</li>
+                            <li>I'm improving my English every day, so this page can have terrible typos</li>
+                        </ul>
                     </div>
                 </div>
             </div>
