--- a/index.html
+++ b/index.html
@@ -68,20 +68,21 @@
                             <h2>Who am I?</h2>
                         </div>
                         <p>My name is Mauro Gómez, I am 23 years old and I live in Argentina.
-                        I am studying computer science engineering at the Arturo Jauretche National University (UNAJ),
-                        I am currently finishing my supervised professional practice to obtain a degree in 
-                        computer science engineering. I am also in the research group "Simulation and Technology 
-                        in High Performance Computing (HPC) for applications of social interest".</p>
+                            I am studying computer science engineering at the Arturo Jauretche National University
+                            (UNAJ),
+                            I am currently finishing my supervised professional practice to obtain a degree in
+                            computer science engineering. I am also in the research group "Simulation and Technology
+                            in High Performance Computing (HPC) for applications of social interest".</p>
                         <p>I'm interested in design, programming, and cloud technologies.</p>
                     </div>
                     <div class="col">
                         <div class="justify-content-md-center">
                             <h2>What is this website?</h2>
                         </div>
-                        <p>Este es mi portafolio personal, creado solo con html, css y javascript. 
-                        Aquí voy a comentar sobre mi y sobre las tecnologías que utilizo o me interesan. 
-                        Espero en un futuro ampliar este sitio agregando alguna sección donde 
-                        pueda comentar mi experiencia con las herramientas que utilizo.</p>
+                        <p>This is my personal portfolio, created only with html, css and javascript.
+                             Here I am going to comment on myself and on the technologies 
+                             that I use or that interest me. I hope in the future to expand this site by 
+                             adding a section where I can comment on my experience with the tools I use.</p>
                     </div>
                     <div class="col">
                         <div class="justify-content-md-center">
@@ -107,7 +108,40 @@
     </div>
 
     <div id="projects_section">
-
+        <div id="projects_title" class="container">
+            <div class="row justify-content-md-center">
+                <h1>PROJECTS</h1>
+            </div>
+        </div>
+        <div id="projects_content" class="container">
+            <div class="row">
+                <div class="col-3">
+                    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab"
+                            aria-controls="v-pills-home" aria-selected="true">Home</a>
+                        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab"
+                            aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+                        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab"
+                            aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+                        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab"
+                            aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="tab-content" id="v-pills-tabContent">
+                        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                            aria-labelledby="v-pills-home-tab">...</div>
+                        <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+                            aria-labelledby="v-pills-profile-tab">...</div>
+                        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
+                            aria-labelledby="v-pills-messages-tab">...</div>
+                        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
+                            aria-labelledby="v-pills-settings-tab">...</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <!-- Optional JavaScript -->
